# PROGR.LOG.FUNC-Diego-Jesus-Vasquez-Calderon

./: EjerciciosHaskell0.hs  EjerciciosHaskell1.hs  EjerciciosHaskell2.hs  FizzBuzz.hs
Katas/Bowling/: Bowling.cabal
Katas/Bowling/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
Katas/Bowling/dist-newstyle/packagedb/ghc-9.4.8/: Bowling-0.1.0.0-inplace.conf  package.cache
Katas/Bowling/src/: Bowling.hs
Katas/FizzBuzz/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
Katas/FizzBuzz/dist-newstyle/packagedb/ghc-9.4.8/: FizzBuzz-0.1.0.0-inplace.conf  package.cache
ProyectosHaskell/: my-proyect.cabal
ProyectosHaskell/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
ProyectosHaskell/src/: Lexer.hs  Lexer.x  Main.hs  Parser.hs  Parser.y
