cabal-version:       2.4
name:                my-project
version:             0.1.0.0

executable my-project
  main-is:             Main.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  other-modules:       Lexer, Parser
  build-depends:       
    base >= 4.14 && < 5,
    array

